objects/LiteratureRequestLineItem__c.object
<CustomObject>
    <description>This object is to add more commercial requests with the quantity along with the existing Literature request.</description>
    <fields>
        <fullName>BusinessUnit__c</fullName>
        <description>Hidden field to store the Business Unit of the Literature Item Product</description>
        <label>Business Unit</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChangeProductLink__c</fullName>
        <description>Q2 June 2016 Release : Added support for console</description>
        <formula>HYPERLINK(&apos;/apex/VFP_HandleRedirect?isdtp=nv&amp;ID=&apos;+Id+&apos;&amp;field=AddProductLink&apos;, &apos;[Change Product]]&apos;, &apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Change Product Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommercialReference__c</fullName>
        <label>Commercial Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommercialReference_lk__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Commercial Reference (Rep)</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Literature Items</relationshipLabel>
        <relationshipName>Literature_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Family__c</fullName>
        <description>Hidden field to store the Family of the Literature Item Product</description>
        <label>Family</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LiteratureRequest__c</fullName>
        <label>Literature Request</label>
        <referenceTo>LiteratureRequest__c</referenceTo>
        <relationshipName>LiteratureRequest_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MasterProduct__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Master Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProductDescription__c</fullName>
        <description>Hidden field to store the Product Description of the Literature Item Product</description>
        <label>Product Description</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductFamily__c</fullName>
        <description>Hidden field to store the Product Family of the Literature Item Product</description>
        <label>Product Family</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductLine__c</fullName>
        <description>Hidden field to store the Product Line of the Literature Item Product</description>
        <label>Product Line</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TECH_GMRCode__c</fullName>
        <label>TECH_GMRCode</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TECH_LTRStatus__c</fullName>
        <formula>TEXT(LiteratureRequest__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TECH_LTRStatus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TECH_UniqueId__c</fullName>
        <description>Field to store Unique Id as ( CaseId-CommercialRefProductId )</description>
        <externalId>true</externalId>
        <label>TECH_UniqueId</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Literature Item</label>
    <nameField>
        <displayFormat>LI-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Literature Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>LTR_VR_DEC12CCC01_LineItemReadonly</fullName>
        <active>false</active>
        <description>This Validation rule is to enforce not to edit any value when the Parent literature request status is processed.</description>
        <errorConditionFormula>AND(ISPICKVAL(LiteratureRequest__r.Status__c,&quot;Processed&quot;),OR(
ISCHANGED(CommercialReference__c),
ISCHANGED(LiteratureRequest__c),
ISCHANGED(Quantity__c)))</errorConditionFormula>
        <errorMessage>Line Item details cannot be changed for the processed Literature requests.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LTR_VR_DEC12CCC02_Quantitylessthanone</fullName>
        <active>true</active>
        <description>This Validation rule is to restrict the user to enter the quantity as less than one.</description>
        <errorConditionFormula>AND($User.BypassVR__c = False, 
Quantity__c &lt; 1)</errorConditionFormula>
        <errorMessage>Quantity should not be less than one .</errorMessage>
    </validationRules>
</CustomObject>